--- a/public/backend/css/app-dark.css
+++ b/public/backend/css/app-dark.css
@@ -57,7 +57,7 @@
 }
 
 .navbar-brand-box {
-    background-color: #252b3b;
+    background-color: #FFFFFF;
   padding: 0 1.5rem;
   text-align: center;
   width: 240px;
