--- a/public/backend/css/app.css
+++ b/public/backend/css/app.css
@@ -68,7 +68,7 @@
 
 .navbar-brand-box {
     /*padding: 0 1.5rem;*/
-    background-color: #252b3b;
+    background-color: #FFFFFF;
     text-align: center;
     width: 240px;
 }
